# evipy

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: workflow.yml
nodejs/: .env.example  .eslintrc.js  .gitignore  .prettierrc  CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
nodejs/examples/: monitor.ts
nodejs/src/: client.ts  index.ts
nodejs/src/models/: device-page.ts  device-query.ts  user.ts  widget-update.ts
nodejs/src/utils/: hash.ts  logger.ts  protocol.ts
nodejs/tests/: hash.test.ts  logger.test.ts  protocol.test.ts
src/evipy/: __init__.py  evipy.py  model_device.py  model_device_page.py  model_device_query.py  model_user.py
