[project]
name = "evipy"
version = "0.0.1"
description = "Control eviqo devices (via the cloud) in python. See also eviqo-hacs for a home-assistant connection."
readme = "README.md"
authors = [
    { name = "Zach", email = "zach@smamily.com" }
]
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "pydantic>=2.12.0",
    "pytest>=8.4.2",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "websockets>=15.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
    "datamodel-code-generator>=0.35.0",
    "ruff>=0.14.1",
]
